kustomize/manifests/kubeflow/1.3/overlays/cluster-yuqc/common/istio-1-9-0/istio-install/base/patch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
spec:
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-certs
    hosts:
    - '*.cluster-yuqc.network-yuqc.com'
